Bugfix reading time z-index and date font-size

--- a/src/pages/blog.module.scss
+++ b/src/pages/blog.module.scss
@@ -19,7 +19,7 @@
 
 .read-time {
     position: absolute;
-    bottom: 1rem;
+    bottom: 0.5rem;
     left: 1rem;
     padding: 0;
     font-weight: bold;
@@ -27,6 +27,7 @@
     font-size: 0.8rem;
     opacity: 0.5;
     transition: opacity 0.3s ease-in-out;
+    z-index: 1;
 }
 
 .post-content {
@@ -48,8 +49,8 @@
 }
 
 .post-date {
-    font-size: 0.8rem;
-    color: rgba(0, 0, 0, 0.4) !important;
+    font-size: 0.7rem !important;
+    color: rgba(0, 0, 0, 0.2) !important;
     margin-bottom: 0 !important;
     height: auto;
     max-height: 0;
